<resources>
    <string name="app_name">View New</string>
    <string name="app_intro">A pure reading App for you</string>

    //main drawer
    <string name="logout">注销</string>
    <string name="zhihu">zzz</string>
    <string name="wechat">www</string>
    <string name="gank">精选阅读</string>
    <string name="gold">日常</string>
    <string name="vtex">V</string>
    <string name="userInfo">个人信息</string>
    <string name="drawer_about">关于</string>
    <string name="drawer_collection">收藏</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="drawer_group_content">资讯</string>
    <string name="drawer_group_options">选项</string>

    <string name="detail_bottom_share">分享</string>
    <string name="detail_bottom_like">点赞</string>
    <string name="detail_bottom_commit">评论</string>
    <string name="comment_expand">收起</string>

    <string name="dialog_clean_cache">确定清除缓存?</string>
    <string name="dialog_clean_negative_text">容我想想</string>
    <string name="dialog_clean_positive_text">狠心清除</string>

    <string name="dialog_exit_login">确定退出登录？</string>
    <string name="dialog_exit_negative_text">容我想想</string>
    <string name="dialog_exit_positive_text">狠心退出</string>

    <string name="dialog_edit_name">修改昵称</string>
    <string name="dialog_edit_signature">修改签名</string>
    <string name="dialog_edit_intro">修改个人简介</string>
    <string name="dialog_edit_address">修改居住地</string>
    <string name="dialog_edit_github">修改 GitHub 账号</string>
    <string name="dialog_edit_blog">修改个人博客</string>
    <string name="dialog_edit_twitter">修改 Twitter 账号</string>
    <string name="dialog_modify_loading">正在修改...</string>

    <string name="dialog_btn_confirm">确定</string>
    <string name="dialog_btn_cancel">取消</string>



    <string name="action_copy">复制链接到剪贴板</string>
    <string name="action_save">保存到本地</string>
    <string name="action_share">分享链接</string>
    <string name="action_like">收藏</string>
    <string name="action_search">搜索</string>

    <string name="setting_cache">自动缓存</string>
    <string name="setting_image">无图模式</string>
    <string name="setting_night">夜间模式</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_clear">清除缓存</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_normal">常规</string>
    <string name="setting_other">其他</string>

    <string name="about_addr">项目地址:\nhttps://github.com/codeestX/GeekNews</string>
    <string name="about_author">作者:Est\t\t(codeest.dev@gmail.com)</string>
    <string name="about_project">项目简介:\n极客日报,一个纯粹的阅读App\n为了熟悉当前Android端主流框架的使用,也为了能有一款将新闻、技术文章、福利一网打尽的简洁的阅读应用,利用闲暇时间做了这个项目n(*≧▽≦*)n\n
        本着学习的目的,该项目会持续迭代与优化,加入更丰富的阅读内容与功能,并不断尝试最新的技术,欢迎star、fork、issue、email</string>
    <string name="about_award">请作者吃糖(￣▽￣)</string>
    <string name="about_info">GeekNews\t\t\tV1.3.0</string>
</resources>
