<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nesId"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/lin1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorCard"
                app:contentPadding="3dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <TextView
                    android:text="@string/about_author"
                    android:textSize="16sp"
                    android:textColor="@color/colorText"
                    android:padding="10dp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCard"
                app:contentPadding="3dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <TextView
                    android:textColor="@color/colorText"
                    android:text="@string/about_project"
                    android:padding="10dp"
                    android:gravity="start"
                    android:lineSpacingMultiplier="1.2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/tuisong"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCard"
                app:contentPadding="3dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">
                <TextView
                    android:textColor="@color/colorText"
                    android:text="@string/about_addr"
                    android:padding="10dp"
                    android:gravity="start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_about_award"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCard"
                app:contentPadding="3dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">
                <TextView
                    android:textColor="@color/colorText"
                    android:text="@string/about_award"
                    android:padding="10dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="3dp"
                    android:drawableEnd="@mipmap/weixin"/>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorCard"
                app:contentPadding="3dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">
                <TextView
                    android:id="@+id/versionTxt"
                    android:textColor="@color/colorText"
                    android:text="@string/about_info"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/guanyu"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>
</android.support.design.widget.CoordinatorLayout>